INTELLIJ-283 fix compatibility issue